--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,12 @@ header,
 main,
 footer {
   width: 50vw;
-  border: 1px solid;
 }
 
 header,
 footer {
   height: 100px;
-  background: var(--color-4);
+  background: var(--secondary);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,25 +15,27 @@ footer {
 
 main {
   flex: 1;
-  background: var(--color-2);
+  background: var(--secondary);
   padding: 1.5rem 1rem;
   height: calc(100vh - 200px);
+  border: 1px solid var(--shadow);
+  border-left: none;
+  border-right: none;
   position: relative;
   height: 100%;
   overflow-y: auto;
 }
 
 .card {
-  border: 0.25rem solid var(--color-6);
   border-radius: 0.5rem;
   padding: 2rem;
   position: relative;
-  background: var(--color-3);
+  background: var(--primary);
   display: flex;
   flex-direction: column;
   gap: 2rem;
   margin-bottom: 1rem;
-  filter: drop-shadow(0 1px 0px #000000);
+  /* filter: drop-shadow(0 1px 0px #000000); */
 
   &:last-of-type {
     margin-bottom: 0;
@@ -49,12 +50,12 @@ main {
 }
 
 .bookmark {
-  background: var(--color-6);
+  background: var(--badge);
   position: relative;
   height: 30px;
   width: 50px;
   border-radius: 0.25rem 0.25rem 0 0;
-  filter: drop-shadow(0px 2px 2px #000000);
+  filter: drop-shadow(0px 1px 2px var(--shadow));
 
   &::before {
     content: "✭";
@@ -63,9 +64,12 @@ main {
     left: 50%;
     transform: translate3d(-50%, -40%, 0);
     font-size: 1.8rem;
-    color: var(--color-6);
-    text-shadow: -1px 0 var(--color-1), 0 1px var(--color-1),
-      1px 0 var(--color-1), 0 -1px var(--color-1);
+
+    /* TODO: toggle color if card it's bookmarked */
+    /* color: var(--accent); */
+    color: var(--badge);
+    text-shadow: -1px 0 var(--accent), 0 1px var(--accent), 1px 0 var(--accent),
+      0 -1px var(--accent);
   }
 
   &::after {
@@ -77,14 +81,18 @@ main {
     bottom: 0;
     transform: translate3d(0, 100%, 0);
     border-top-width: 6px;
-    border-color: var(--color-6) var(--color-6) transparent var(--color-6);
+    border-color: var(--badge) var(--badge) transparent var(--badge);
   }
 }
 
 h1 {
-  color: var(--color-3);
+  color: var(--text);
   width: 75%;
   text-align: center;
+}
+
+h2 {
+  color: var(--text);
 }
 
 .categories {
@@ -92,11 +100,16 @@ h1 {
   gap: 1rem;
 
   li {
-    background: var(--color-2);
+    background: var(--background);
     padding: 0.25rem 0.5rem;
     border-radius: 0.25rem;
-    color: var(--color-4);
-    filter: drop-shadow(0 1px 2px #000000);
+    color: var(--primary);
+    filter: drop-shadow(0 1px 1px var(--shadow));
+
+    /* TODO:check this */
+    /* .darkside & {
+      color: var(--color-5);
+    } */
   }
 }
 
@@ -123,11 +136,11 @@ h1 {
 
         .home {
           position: absolute;
-          background: var(--color-6);
+          background: var(--badge);
           height: 30px;
           width: 50px;
           border-radius: 0 0 0.25rem 0.25rem;
-          filter: drop-shadow(0px 2px 2px #000000);
+          filter: drop-shadow(0px 2px 2px var(--shadow));
           top: 50%;
 
           &::after {
@@ -137,11 +150,10 @@ h1 {
             top: -35.2px;
             border-style: solid;
             border-width: 0 35.4px 35.4px 0;
-            -webkit-border-bottom-right-radius: 0;
+            /* -webkit-border-bottom-right-radius: 0; */
             border-top-width: 0px;
-            border-color: var(--color-6) var(--color-6) transparent
-              var(--color-6);
-            rotate: -45deg;
+            border-color: var(--badge) var(--badge) transparent var(--badge);
+            transform: rotate(-45deg);
             transform-origin: 100% 100%;
           }
         }
@@ -152,19 +164,19 @@ h1 {
         }
 
         .profile {
-          background: var(--color-6);
+          background: var(--badge);
           position: relative;
           height: 30px;
           width: 50px;
           border-radius: 1.25rem 1.25rem 0 0;
           transform: translate3d(0, 10px, 0);
-          filter: drop-shadow(0px 2px 2px #000000);
+          filter: drop-shadow(0px 2px 2px var(--shadow));
 
           &:before {
             content: "";
             height: 25px;
             width: 25px;
-            background: var(--color-6);
+            background: var(--badge);
             border-radius: 50%;
             position: absolute;
             transform: translate3d(-50%, -100%, 0);
@@ -173,5 +185,143 @@ h1 {
         }
       }
     }
+  }
+}
+
+/*
+    BackgroundAnimation
+*/
+
+.area {
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+}
+
+.circles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+    
+
+    borde
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
   }
 }
