--- a/css/defaults.css
+++ b/css/defaults.css
@@ -109,9 +109,9 @@ html {
   --text: #edf7f1;
   --background: #060f09;
   --primary: #38bc69;
-  --secondary: #1c6d39;
+  --secondary: #09170e;
   --accent: #1f984c;
-  --badge: #dc4600;
+  --badge: #fccd87;
   --shadow: rgba(255, 255, 255, 0.25);
 }
 
