create html form

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ main {
 }
 
 .card {
-  border-radius: 0.5rem;
+  border-radius: var(--border-radius);
   padding: 2rem;
   position: relative;
   background: var(--primary);
