--- a/css/newQuestions.css
+++ b/css/newQuestions.css
@@ -30,10 +30,17 @@
       textarea {
         width: 100%;
         padding: 1rem;
-        margin-bottom: 1rem;
+        margin-bottom: 0.125rem;
       }
 
-      [type="text"] {
+      p {
+        width: 100%;
+        text-align: right;
+        margin-bottom: 1rem;
+        font-size: 0.8rem;
+      }
+
+      input[type="text"] {
         width: 100%;
         margin-bottom: 1rem;
         padding: 1rem;
