--- a/css/newQuestions.css
+++ b/css/newQuestions.css
@@ -33,7 +33,7 @@
         margin-bottom: 0.125rem;
       }
 
-      p {
+      small {
         width: 100%;
         text-align: right;
         margin-bottom: 1rem;
