--- a/css/styles.css
+++ b/css/styles.css
@@ -227,14 +227,16 @@ h2 {
   bottom: -150px;
 }
 
-.circles li:nth-child(1) {
+.circles li:nth-child(1),
+.circles li:nth-child(20) {
   left: 25%;
   width: 80px;
   height: 80px;
   animation-delay: 0s;
 }
 
-.circles li:nth-child(2) {
+.circles li:nth-child(2),
+.circles li:nth-child(19) {
   left: 10%;
   width: 20px;
   height: 20px;
@@ -242,14 +244,16 @@ h2 {
   animation-duration: 12s;
 }
 
-.circles li:nth-child(3) {
+.circles li:nth-child(3),
+.circles li:nth-child(18) {
   left: 70%;
   width: 20px;
   height: 20px;
   animation-delay: 4s;
 }
 
-.circles li:nth-child(4) {
+.circles li:nth-child(4),
+.circles li:nth-child(17) {
   left: 40%;
   width: 60px;
   height: 60px;
@@ -257,28 +261,32 @@ h2 {
   animation-duration: 18s;
 }
 
-.circles li:nth-child(5) {
+.circles li:nth-child(5),
+.circles li:nth-child(16) {
   left: 65%;
   width: 20px;
   height: 20px;
   animation-delay: 0s;
 }
 
-.circles li:nth-child(6) {
+.circles li:nth-child(6),
+.circles li:nth-child(15) {
   left: 75%;
   width: 110px;
   height: 110px;
   animation-delay: 3s;
 }
 
-.circles li:nth-child(7) {
+.circles li:nth-child(7),
+.circles li:nth-child(14) {
   left: 35%;
   width: 150px;
   height: 150px;
   animation-delay: 7s;
 }
 
-.circles li:nth-child(8) {
+.circles li:nth-child(8),
+.circles li:nth-child(13) {
   left: 50%;
   width: 25px;
   height: 25px;
@@ -286,7 +294,8 @@ h2 {
   animation-duration: 45s;
 }
 
-.circles li:nth-child(9) {
+.circles li:nth-child(9),
+.circles li:nth-child(12) {
   left: 20%;
   width: 15px;
   height: 15px;
@@ -294,7 +303,8 @@ h2 {
   animation-duration: 35s;
 }
 
-.circles li:nth-child(10) {
+.circles li:nth-child(10),
+.circles li:nth-child(11) {
   left: 85%;
   width: 150px;
   height: 150px;
